--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <button class="tablinks" onclick="openTab(event, 'Access')">MS-Access</button>
     <button class="tablinks" onclick="openTab(event, 'Excel')">MS-Excel</button>
     <button class="tablinks" onclick="openTab(event, 'Writing')">Writing Sample </button>
-    <button class="tablinks" onclick="openTab(event, 'Certificates')">Achievement</button>
+    <button class="tablinks" onclick="openTab(event, 'Certificates')">Achievements</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
