--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <button class="tablinks" onclick="openTab(event, 'Access')">MS-Access</button>
     <button class="tablinks" onclick="openTab(event, 'Excel')">MS-Excel</button>
     <button class="tablinks" onclick="openTab(event, 'Writing')">Writing Sample </button>
-    <button class="tablinks" onclick="openTab(event, 'Certificates')">Achievements</button>
+    <button class="tablinks" onclick="openTab(event, 'Achievements')">Achievements</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
@@ -121,8 +121,9 @@
     </iframe>
   </div>
 
-  <div id="Certificates" class="tabcontent">
-    <h1>The content will be uploaded soon. Thank you for your patience.</h1>
+  <div id="Achievements" class="tabcontent">
+    <iframe src="Achievements.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
+
   </div>
 
 
