--- a/Achievements.html
+++ b/Achievements.html
@@ -71,7 +71,7 @@
     </td>
     <td>
       <div class="image-box">
-        <img src="achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 5">
+        <img src="images/Documentation of LRR.pdf" alt="Achievement 5">
       </div>
       <div class="caption">Sample Text 5</div>
     </td>
