--- a/Achievements.html
+++ b/Achievements.html
@@ -47,7 +47,7 @@
       <div class="image-box">
         <img src="achievements/CM Cell Certificate of Participation.jpeg" alt="Achievement 1">
       </div>
-      <div class="caption">Certificate of Participation in an AAM Web Portal Training program</div>
+      <div class="caption">1. Certificate of Participation in an AAM Web Portal Training program</div>
     </td>
     <td>
       <div class="image-box">
