--- a/Achievements.html
+++ b/Achievements.html
@@ -45,19 +45,19 @@
   <tr>
     <td>
       <div class="image-box">
-        <img src="achievements/CM Cell Certificate of Participation.jpeg" alt="Achievement 1">
+        <img src="Achievements/CM Cell Certificate of Participation.jpeg" alt="Achievement 1">
       </div>
       <div class="caption">1. Certificate of Participation in an AAM Web Portal Training program</div>
     </td>
     <td>
       <div class="image-box">
-        <img src="achievements/Data Quality Certificate Monitoring & Evaluation.jpg" alt="Achievement 2">
+        <img src="Achievements/Data Quality Certificate Monitoring & Evaluation.jpg" alt="Achievement 2">
       </div>
       <div class="caption">Data Quality Certificate Monitoring & Evaluation</div>
     </td>
     <td>
       <div class="image-box">
-        <img src="achievements/PowerBI Certificate by PWC.jpg" alt="Achievement 3">
+        <img src="Achievements/PowerBI Certificate by PWC.jpg" alt="Achievement 3">
       </div>
       <div class="caption">PowerBI Certificate by PWC</div>
     </td>
@@ -65,7 +65,7 @@
   <tr>
     <td>
       <div class="image-box">
-        <img src="achievements/Poster Presentation 1st Prize.jpg" alt="Achievement 4">
+        <img src="Achievements/Poster Presentation 1st Prize.jpg" alt="Achievement 4">
       </div>
       <div class="caption">1st Prize for Best Poster Presentation</div>
     </td>
