--- a/Achievements.html
+++ b/Achievements.html
@@ -45,9 +45,9 @@
   <tr>
     <td>
       <div class="image-box">
-        <img src="Achievements/CM Cell Certificate of Participation.jpeg" alt="Achievement 1">
+        <img src="Achievements/Certificate SPSS for Data Analysis.jpeg" alt="Achievement 1">
       </div>
-      <div class="caption">Certificate of Participation in an AAM Web Portal Training program</div>
+      <div class="caption">Certificate SPSS for Data Analysis collaboration with JNU</div>
     </td>
     <td>
       <div class="image-box">
@@ -71,9 +71,9 @@
     </td>
     <td>
       <div class="image-box">
-        <img src="images/Documentation of LRR.pdf" alt="Achievement 5">
+        <img src="Achievements/CM Cell Certificate of Participation.jpeg" alt="Achievement 5">
       </div>
-      <div class="caption">Sample Text 5</div>
+      <div class="caption">Certificate of Participation in an AAM Web Portal Training program</div>
     </td>
     <td>
       <div class="image-box">
