--- a/Achievements.html
+++ b/Achievements.html
@@ -45,7 +45,7 @@
   <tr>
     <td>
       <div class="image-box">
-        <img src="Achievements/Certificate SPSS for Data Analysis.jpeg" alt="Achievement 1">
+        <img src="Achievements/Certificate SPSS for Data Analysis.jpg" alt="Achievement 1">
       </div>
       <div class="caption">Certificate SPSS for Data Analysis collaboration with JNU</div>
     </td>
