--- a/Achievements.html
+++ b/Achievements.html
@@ -77,9 +77,9 @@
     </td>
     <td>
       <div class="image-box">
-        <img src="achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 6">
+        <img src="Achievements/State Nominations for consultation on SASHAKT Portal_Jharkhand.jpg" alt="Achievement 6">
       </div>
-      <div class="caption">Sample Text 6</div>
+      <div class="caption">Nominated as State Trainer for SASHAKT Portal Implementation in Jharkhand</div>
     </td>
   </tr>
   <tr>
