--- a/index.html
+++ b/index.html
@@ -149,5 +149,8 @@
     document.getElementById("defaultOpen").click();
   </script>
 
+  <!-- 👇 Noupe chatbot embed code -->
+  <script src='https://www.noupe.com/embed/0197cfc31fe07f74ad85b260b8e60dd26f78.js'></script>
+
 </body>
 </html>
