--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI</button>
+    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI1</button>
     <button class="tablinks" onclick="openTab(event, 'Python')">Python</button>
     <button class="tablinks" onclick="openTab(event, 'R')">R</button>
     <button class="tablinks" onclick="openTab(event, 'Looker')">Looker Studio</button>
