--- a/index.html
+++ b/index.html
@@ -148,9 +148,13 @@
     // Open default tab
     document.getElementById("defaultOpen").click();
   </script>
-
-  <!-- 👇 Noupe chatbot embed code -->
-  <script src='https://www.noupe.com/embed/0197cfc31fe07f74ad85b260b8e60dd26f78.js'></script>
+  <!-- 👇 Dialogflow by Google chatbot embed code -->
+  <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/5bf8ed2a-4309-49fe-ad56-efe6d9b06972">
+  </iframe>
 
 </body>
 </html>
