--- a/index.html
+++ b/index.html
@@ -123,11 +123,17 @@
 
   <div id="Achievements" class="tabcontent">
     <iframe src="Achievements.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
-
   </div>
-
-
-
+  <dif>
+    <!-- 👇 Dialogflow by Google chatbot embed code -->
+    <iframe
+      allow="microphone;"
+      width="350"
+      height="430"
+      src="https://console.dialogflow.com/api-client/demo/embedded/5bf8ed2a-4309-49fe-ad56-efe6d9b06972">
+    </iframe>
+  </dif>
+  
 
   <script>
     function openTab(evt, tabName) {
@@ -147,14 +153,7 @@
 
     // Open default tab
     document.getElementById("defaultOpen").click();
-  </script>
-  <!-- 👇 Dialogflow by Google chatbot embed code -->
-  <iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/5bf8ed2a-4309-49fe-ad56-efe6d9b06972">
-  </iframe>
+  </script> 
 
 </body>
 </html>
