--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI1</button>
+    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI</button>
     <button class="tablinks" onclick="openTab(event, 'Python')">Python</button>
     <button class="tablinks" onclick="openTab(event, 'R')">R</button>
     <button class="tablinks" onclick="openTab(event, 'Looker')">Looker Studio</button>
@@ -124,7 +124,7 @@
   <div id="Achievements" class="tabcontent">
     <iframe src="Achievements.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
   </div>
-  <dif>
+  <div>
     <!-- 👇 Dialogflow by Google chatbot embed code -->
     <iframe
       allow="microphone;"
@@ -132,7 +132,7 @@
       height="430"
       src="https://console.dialogflow.com/api-client/demo/embedded/5bf8ed2a-4309-49fe-ad56-efe6d9b06972">
     </iframe>
-  </dif>
+  </div>
   
 
   <script>
