--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI1</button>
+    <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI</button>
     <button class="tablinks" onclick="openTab(event, 'Python')">Python</button>
     <button class="tablinks" onclick="openTab(event, 'R')">R</button>
     <button class="tablinks" onclick="openTab(event, 'Looker')">Looker Studio</button>
@@ -146,12 +146,7 @@
   </script> 
   
   <!-- 👇 Dialogflow by Google chatbot embed code -->
-  <iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/5bf8ed2a-4309-49fe-ad56-efe6d9b06972">
-</iframe>
-
+  <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2025/07/03/11/20250703113611-HGHL1XNC.js"></script>
 </body>
 </html>
