--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
   <div id="Achievements" class="tabcontent">
     <iframe src="Achievements.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
   </div>
+
+  <div id="Contact" class="tabcontent">
+    <iframe src="https://ujjwalfx2.github.io/Ujjal-Roy/" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
+  </div>
   
   <script>
     function openTab(evt, tabName) {
@@ -145,7 +149,7 @@
     document.getElementById("defaultOpen").click();
   </script> 
   
-  <!-- 👇 Dialogflow by Google chatbot embed code -->
+  <!-- 👇 ⚡ by Botpress chatbot embed code "2 scripts"-->
   <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
   <script src="https://files.bpcontent.cloud/2025/07/03/11/20250703113611-HGHL1XNC.js"></script>
 </body>
