--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <button class="tablinks" onclick="openTab(event, 'Excel')">MS-Excel</button>
     <button class="tablinks" onclick="openTab(event, 'Writing')">Writing Sample </button>
     <button class="tablinks" onclick="openTab(event, 'Achievements')">Achievements</button>
-    <button class="tablinks" onclick="openTab(event, 'Achievements')">Contact</button>
+    <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
