--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </div>
 
   <div id="Contact" class="tabcontent">
-    <iframe src="https://ujjwalfx2.github.io/Ujjal-Roy/" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
+    <iframe src="contact.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
   </div>
   
   <script>
