--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <button class="tablinks" onclick="openTab(event, 'Writing')">Writing Sample </button>
     <button class="tablinks" onclick="openTab(event, 'Achievements')">Achievements</button>
     <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
+    <button class="tablinks" onclick="openTab(event, 'Website')">Contact</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
@@ -128,6 +129,10 @@
 
   <div id="Contact" class="tabcontent">
     <iframe src="contact.html" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
+  </div>
+
+  <div id="Website" class="tabcontent">
+    <iframe src="https://ujjwalfx2.github.io/Ujjal-Roy/" width="100%" height="600px" style="border:1px solid #ccc;"></iframe>
   </div>
   
   <script>
