--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <button class="tablinks" onclick="openTab(event, 'Writing')">Writing Sample </button>
     <button class="tablinks" onclick="openTab(event, 'Achievements')">Achievements</button>
     <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
-    <button class="tablinks" onclick="openTab(event, 'Website')">Personal Website</button>
+    <button class="tablinks" onclick="openTab(event, 'Website')">Website</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
