--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <button class="tablinks" onclick="openTab(event, 'Achievements')">Achievements</button>
     <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
     <button class="tablinks" onclick="openTab(event, 'Website')">Website</button>
+    <button class="tablinks" onclick="openWebsiteTab()">Website</button>
   </div>
 
   <div id="PowerBI" class="tabcontent">
@@ -154,6 +155,13 @@
     // Open default tab
     document.getElementById("defaultOpen").click();
   </script> 
+  
+  <script>
+    function openWebsiteTab() {
+      window.open("https://ujjwalfx2.github.io/Ujjal-Roy/", "_blank");
+    }
+  </script>
+  
   
   <!-- 👇 ⚡ by Botpress chatbot embed code "2 scripts"-->
   <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
