--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
             <i class="fa-brands fa-github"></i> GitHub
           </a>
           <a href="https://www.youtube.com/ujjwalfx?sub_confirmation=1" target="_blank">
-            <i class="fa-brands fa-youtube"></i> YouTube
+            <i class="fa-brands fa-youtube"></i> YouTube (75.8K subscribers)
           </a>
           <a href="https://www.linkedin.com/in/ujjwalroy/" target="_blank">
             <i class="fa-brands fa-linkedin"></i> LinkedIn
@@ -195,6 +195,7 @@
           <a href="https://twitter.com/ujjwalfx?s=09" target="_blank">
             <i class="fa-brands fa-x-twitter"></i> Twitter
           </a>
+          <img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors" style="float: right;">
         </div>
       </div>
       
