--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
     .container {
       width: 100%;
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 20px auto;
       padding: 10px;
     }
@@ -195,7 +195,7 @@
           <a href="https://twitter.com/ujjwalfx?s=09" target="_blank">
             <i class="fa-brands fa-x-twitter"></i> Twitter
           </a>
-          <img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors" style="float: right;">
+          <img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors" style="float: right; width: 50px; height: 50px;">
         </div>
       </div>
       
