--- a/contact.html
+++ b/contact.html
@@ -195,10 +195,9 @@
           <a href="https://twitter.com/ujjwalfx?s=09" target="_blank">
             <i class="fa-brands fa-x-twitter"></i> Twitter
           </a>
-          <img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors" style="float: right; width: 50px; height: 50px;">
+          <i class="fa fa-users" aria-hidden="true"></i><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors"style="width: 70px; height: auto">          
         </div>
-      </div>
-      
+      </div>      
     </div>
   </div>
 </body>
