--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
           <a href="https://twitter.com/ujjwalfx?s=09" target="_blank">
             <i class="fa-brands fa-x-twitter"></i> Twitter
           </a>
-          <i class="fa fa-users" aria-hidden="true"></i><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=epju6c3krwm9su9ch6nht9bdgmantw2a" border="0" title="Total Visitors" alt="Total Visitors"style="width: 70px; height: auto">          
+          <i class="fa fa-users" aria-hidden="true"></i><img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=ezk7wzc5cqt9cetusl8kkyf43x3j9rrs" border="0" title="Total Visitors" alt="Total Visitors"style="width: 70px; height: auto">          
         </div>
       </div>      
     </div>
