--- a/index.html
+++ b/index.html
@@ -5,68 +5,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Project</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+  }
+  h1, h3 {
+    text-align: center;
+    padding: 5px;
+    background-color: #333;
+    color: white;
+    margin: 0;
+    font-size: 28px;
+  }
+  .tab {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .tab button {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 20px;
+    transition: 0.3s;
+    font-size: 17px;
+    flex: 1 0 auto; /* allow shrinking on small screens */
+  }
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  .tab button.active {
+    background-color: #ccc;
+  }
+  .tabcontent {
+    display: none;
+    padding: 0;
+    height: calc(100vh - 120px);
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  .tabcontent img, .tabcontent video {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  /* Header responsive flex layout */
+  .header-flex {
+    background-color: #333;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 10px;
+  }
+  .header-center {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  .header-right {
+    position: absolute;
+    right: 20px;
+    font-size: 16px;
+    color: white;
+  }
+  @media (max-width: 768px) {
+    h1 { font-size: 20px; padding: 15px; }
+    .tab button { padding: 10px 14px; font-size: 15px; }
+    .header-right {
+      position: static;
+      margin-top: 8px;
     }
-    h1, h3 {
-      text-align: center;
-      padding: 20px;
-      background-color: #333;
-      color: white;
-      margin: 0;
-    }
-    .tab {
-      overflow: hidden;
-      background-color: #f1f1f1;
-      display: flex;
-      justify-content: center;
-    }
-    .tab button {
-      background-color: inherit;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      padding: 14px 20px;
-      transition: 0.3s;
-      font-size: 17px;
-    }
-    .tab button:hover {
-      background-color: #ddd;
-    }
-    .tab button.active {
-      background-color: #ccc;
+    .header-center {
+      flex-direction: column;
     }
     .tabcontent {
-      display: none;
-      padding: 0;
-      height: calc(100vh - 120px);
+      height: calc(100vh - 160px);
     }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-    .tabcontent img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-  </style>
+  }
+  @media (max-width: 480px) {
+    h1 { font-size: 18px; padding: 10px; }
+    .tab button { font-size: 14px; padding: 8px 10px; }
+    .header-right { font-size: 14px; }
+  }
+</style>
 </head>
 <body>
 
-<div style="background-color: #333;  display: flex; justify-content: center; align-items: center; position: relative;">  
-  <!-- Center content: My Projects + Sample Dataset -->
-  <div style="display: flex; align-items: center; gap: 16px;">
-    <h1 style="color: white; margin: 0;">My Projects</h1>
-    <span style="color: white; font-size: 16px;">Sample Dataset Implemented</span>
+<div class="header-flex">  
+  <div class="header-center">
+    <h1 style="margin: 0;">Real Projects</h1>
+    <span style="font-size: 16px; color: white;">with Realistic Sample Data</span>
   </div>  
-  <!-- Right-aligned Text2 -->
-  <span style="position: absolute; right: 20px; color: white; font-size: 16px;">
-    Total Visitor: <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=ezk7wzc5cqt9cetusl8kkyf43x3j9rrs" border="0" title="Total Visitors" alt="Total Visitors"style="float: right; width: 70px; height: auto">
+  <span class="header-right">
+    Total Visitor:
+    <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=ezk7wzc5cqt9cetusl8kkyf43x3j9rrs" border="0" title="Total Visitors" alt="Total Visitors" style="width: 70px; height: auto;">
   </span>
-  </div>
+</div>
+
   
   <div class="tab">
     <button class="tablinks" onclick="openTab(event, 'PowerBI')" id="defaultOpen">PowerBI</button>    
