--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       } else if (state === "odisha") {
         url = "https://app.powerbi.com/view?r=eyJrIjoiNjQxNzIzNDMtODQ5Ni00N2M2LTg1ZjItMmI4NGUzYmIwMzE5IiwidCI6IjI2ZWY3ZmQyLTJhN2YtNDEzNS1hMmU0LWRlOWFjZjE2OGIyYSIsImMiOjF9";
       }
-      iframe.src = url;
+      iframe.src = url + "&rs:embed=true&fitToWidth=true";
     }
 
     // Open default tab
