--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   </div>
   
   <div id="odk" class="tabcontent">
+    <iframe src="https://ee.kobotoolbox.org/x/uXccLwO8"></iframe>
     <iframe src="https://ee.kobotoolbox.org/x/pSRSAfsX"></iframe>
   </div>
 
