--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
   </div>
   
   <div id="odk" class="tabcontent">
-    <iframe src="https://ee.kobotoolbox.org/x/uXccLwO8"></iframe>
-    <iframe src="https://ee.kobotoolbox.org/x/pSRSAfsX"></iframe>
+    <iframe src="https://ee.kobotoolbox.org/x/X6uhcbCz"></iframe>
+    <!--<iframe src="https://ee.kobotoolbox.org/x/pSRSAfsX"></iframe>-->
   </div>
 
   <div id="Access" class="tabcontent">
