--- a/Achievements.html
+++ b/Achievements.html
@@ -82,26 +82,26 @@
       <div class="caption">Nominated as State Trainer for SASHAKT Portal Implementation in Jharkhand</div>
     </td>
   </tr>
-  <!--<tr>
+  <tr>
     <td>
       <div class="image-box">
-        <img src="achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 7">
+        <img src="Achievements/Data Visualization using Tableau.jpg" alt="Achievement 7">
       </div>
-      <div class="caption">Sample Text 7</div>
+      <div class="caption">Data Visualization using Tableau</div>
     </td>
-    <td>
+    <!--<td>
       <div class="image-box">
-        <img src="achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 8">
+        <img src="Achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 8">
       </div>
       <div class="caption">Sample Text 8</div>
     </td>
     <td>
       <div class="image-box">
-        <img src="achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 9">
+        <img src="Achievements/Achievment-CM Cell Certificate of Participation.jpeg" alt="Achievement 9">
       </div>
       <div class="caption">Sample Text 9</div>
-    </td>
-  </tr>-->
+    </td>-->
+  </tr>
 </table>
 
 </body>
