--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
   </div>  
   <span class="header-right">
     Total Visitor:
-    <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=ezk7wzc5cqt9cetusl8kkyf43x3j9rrs" border="0" title="Total Visitors" alt="Total Visitors" style="width: 70px; height: auto;">
+    <!-- Old hitcounter <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=ezk7wzc5cqt9cetusl8kkyf43x3j9rrs" border="0" title="Total Visitors" alt="Total Visitors" style="width: 70px; height: auto;">-->
+    <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=281etnyn5tr6ztkyxaw12ehjj2qz8d8e" border="0" title="Total Visitors" alt="Total Visitors" style="width: 70px; height: auto;">
   </span>
 </div>
 
