--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
       window.open("https://ujjwalfx2.github.io/Ujjal-Roy/", "_blank");
     }
 
-    function openTableauTab() {
-      window.open("https://public.tableau.com/app/profile/ujjwal.roy3010/viz/GooglesheetDataDashboard-Tableau/Dashboard2?publish=yes", "_blank");
+    function openTableauTab() {      
+      window.open("https://public.tableau.com/app/profile/ujjwal.roy3010/viz/Jharkhand-HWC/Dashboard1?publish=yes", "_blank");
+      <!--window.open("https://public.tableau.com/app/profile/ujjwal.roy3010/viz/GooglesheetDataDashboard-Tableau/Dashboard2?publish=yes", "_blank");-->
     }
 
   </script>
